--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,16 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://www.evotto.in",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
