--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://evotto:evotto2213@evotto.ij9jl.mongodb.net/?retryWrites=true&w=majority&appName=Evotto
 PORT=2213
 JWT_SECRET_KEY=EVOTTOEVOLUTIONTOAUTOMATIONINDUSTRY
+EMAIL=yuvraj13preet@gmail.com
+EMAIL_PASSWORD=nzya honn fmiv cxdt
