Updated env file

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MONGO_URI=mongodb+srv://evotto:evotto2213@evotto.ij9jl.mongodb.net/?retryWrites=true&w=majority&appName=Evotto
 PORT=2213
 JWT_SECRET_KEY=EVOTTOEVOLUTIONTOAUTOMATIONINDUSTRY
-EMAIL=yuvraj13preet@gmail.com
-EMAIL_PASSWORD=nzya honn fmiv cxdt
+EMAIL=evotto.service@gmail.com
+EMAIL_PASSWORD="buno sfwy jefi vzuz"
 CLOUDINARY_CLOUD_NAME=dbrgkwwzr
 CLOUDINARY_API_KEY=782143124349643
 CLOUDINARY_API_SECRET=PY5cRHdbphYXBVKUJGCvhUxZyc0
