--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
 MONGO_URI=mongodb+srv://evotto:evotto2213@evotto.ij9jl.mongodb.net/?retryWrites=true&w=majority&appName=Evotto
 PORT=2213
 JWT_SECRET_KEY=EVOTTOEVOLUTIONTOAUTOMATIONINDUSTRY
-# EMAIL=evotto.service@gmail.com
-EMAIL=yuvraj13preet@gmail.com
-# EMAIL_PASSWORD="buno sfwy jefi vzuz"
-EMAIL_PASSWORD="nzya honn fmiv cxdt"
+EMAIL=evotto.service@gmail.com
+EMAIL_PASSWORD="buno sfwy jefi vzuz"
 CLOUDINARY_CLOUD_NAME=dll9obfaj
 CLOUDINARY_API_KEY=231471576966751
 CLOUDINARY_API_SECRET=ZTXbBndY_yulkDxPyQBr_fJVWJ4
